3rd Year Update

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
             <h2>I am a Research Assistant at <a target="_blank" href="https://rmtl.engineering.queensu.ca/">RMTL</a>!</h2>
             <hr>
             <ul class="lighter">
-              <li>Currently a 2nd year student at <a href="https://www.queensu.ca/" target="_blank">Queen's University</a> in Kingston, Ontario, Canada</li>
+              <li>Currently a 3rd year student at <a href="https://www.queensu.ca/" target="_blank">Queen's University</a> in Kingston, Ontario, Canada</li>
               <li>Majoring in <a href="https://www.queensu.ca/mathstat/undergraduate/prospective-undergraduate/mthe" target="_blank">Mathematics and Engineering</a> with an option in Systems and Robotics</li>
-              <li>Have strong interests in <a>Software Development</a>, <a>UI/UX Design</a> and <a>Data Science</a></li>
+              <li>Have strong interests in <a>Software Development</a>, <a>Computer Hardware Engineering</a> and <a>Data Science</a></li>
             </ul>
           </div>
           <div class="about-buttons">
