Update on work status for profile page.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="right-box">
           <div class="about-text">
             <h1>Hi, I'm Kevin.</h1>
-            <h2>I am a Research Assistant at <a target="_blank" href="https://rmtl.engineering.queensu.ca/">RMTL</a>!</h2>
+            <h2>I am looking for 2023 internships!</h2>
             <hr>
             <ul class="lighter">
               <li>Currently a 3rd year student at <a href="https://www.queensu.ca/" target="_blank">Queen's University</a> in Kingston, Ontario, Canada</li>
