--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <img src="images/kevin.jpg" alt="Kevin Liang" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
             <h2>Kevin Liang</h2>
             <p>MASc Student</p>
-            <p class="text-muted">Edward S. Rogers Sr. Department of <br /> Electrical and Computer Engineering, <br /> University of Toronto</p>
+            <p class="text-muted">Systems Control Group, <br /> Edward S. Rogers Sr. Department of <br /> Electrical and Computer Engineering, <br /> University of Toronto</p>
             <div class="d-flex justify-content-center">
               <a href="https://github.com/sanbroh" class="btn btn-outline-dark btn-sm m-1" target="_blank">GitHub</a>
               <a href="https://linkedin.com/in/keviniang" class="btn btn-outline-primary btn-sm m-1" target="_blank">LinkedIn</a>
@@ -81,12 +81,12 @@
           <div class="col-md-8 text-start">
             <h3>About Me</h3>
             <p>
-              I am an incoming MASc student in the Systems Control group at the University of Toronto, supervised by <a href="https://www.control.toronto.edu/~pavel/" target="_blank">Prof. Lacra Pavel</a>.
+              I am a MASc student in the Systems Control group at the University of Toronto, supervised by <a href="https://www.control.toronto.edu/~pavel/" target="_blank">Prof. Lacra Pavel</a>.
+              My research interests lie at the intersection of game theory and data-driven control.
             </p>
             <p>
               I graduated from Queen's University, Kingston in 2025 with a BASc in Mathematics and Engineering, with an option in Systems and Robotics (M11).
-              My research interest is in the area of multi-agent control and reinforcement learning, where heavy mathematics help solve real world problems.
-              Before graduate school, I interned at RBC Capital Markets as an algo product manager for its electronic trading platform and assisted in nuclear materials research
+              Before graduate school, I interned at RBC Capital Markets as an algo product manager for its global electronic trading platform and assisted in nuclear materials research
               at RMTL (Queen's). Outside of work and school, I am focused on giving back through mentorship and leadership as part of my commitment to help others around me.
               You can check out some of my past work and organizations <a href="./projects.html">here</a>.
             </p>
