--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="col-md-8 text-start">
             <h3>About Me</h3>
             <p>
-              I am a MASc student in the Systems Control group at the University of Toronto, supervised by <a href="https://www.control.toronto.edu/~pavel/" target="_blank">Prof. Lacra Pavel</a>.
+              I am a MASc student in the Systems Control Group at the University of Toronto, supervised by <a href="https://www.control.toronto.edu/~pavel/" target="_blank">Prof. Lacra Pavel</a>.
               My research interests lie at the intersection of game theory and data-driven control.
             </p>
             <p>
